added open graph tags

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
       he enjoys mentoring aspiring engineers, speaking at Universities, and petting alpacas in his spare time. Zero Plus One Podcast we will cover everything from how to land your dream job, 
       career advice, tech, and hear extraordinary guests talk about their journey to success."
     />
+
+    <meta property="og:image" content="%PUBLIC_URL%/zpo.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.zeroplusonepodcast.com" />
+    <meta property="og:title" content="Zero Plus One Podcast" />
+    <meta property="og:description" content="We strive to bring you the most valuable insights into becoming and being a successful software engineer." />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="192x192"  href="%PUBLIC_URL%/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512"  href="%PUBLIC_URL%/android-icon-512x512.png">
