updated og image

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       career advice, tech, and hear extraordinary guests talk about their journey to success."
     />
 
-    <meta property="og:image" content="%PUBLIC_URL%/zpo.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/zpo.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.zeroplusonepodcast.com" />
     <meta property="og:title" content="Zero Plus One Podcast" />
